// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "c5d3611b4fc5cae1",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 90,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 264,
  "paths": 0,
  "selects": 5,
  "sha": "fe268405f7176d28",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 100,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 517,
  "paths": 12,
  "selects": 0,
  "sha": "45739dae209eb2dd",
  "svgs": 12,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "2b1e817295902506",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 85,
  "paths": 0,
  "selects": 0,
  "sha": "1c6aee7c91924f97",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 56,
  "paths": 0,
  "selects": 0,
  "sha": "cc6c5bc8ee37da35",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 25,
  "canvases": 0,
  "inputs": 8,
  "lengthBucket": 278,
  "paths": 6,
  "selects": 0,
  "sha": "22936c01e60e39a7",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 44,
  "canvases": 12,
  "inputs": 3,
  "lengthBucket": 392,
  "paths": 2,
  "selects": 0,
  "sha": "cd726884a371524d",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "3cb160e8d07472be",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 97,
  "paths": 0,
  "selects": 0,
  "sha": "999fb44bfbfe0601",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 6,
  "selects": 0,
  "sha": "1ef8063d34320e25",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 51,
  "paths": 0,
  "selects": 0,
  "sha": "ab0ecc83fc0babae",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 25,
  "canvases": 1,
  "inputs": 13,
  "lengthBucket": 485,
  "paths": 6,
  "selects": 1,
  "sha": "ea0cd64b79a58911",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 208,
  "paths": 0,
  "selects": 0,
  "sha": "537b9cbd7a5ee70a",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 192,
  "paths": 3,
  "selects": 2,
  "sha": "5f2a3fec1ea0e283",
  "svgs": 9,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 68,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 316,
  "paths": 4,
  "selects": 0,
  "sha": "e0efc29ffa001e09",
  "svgs": 14,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "0de5c7a3b3dbc05e",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 51,
  "paths": 0,
  "selects": 0,
  "sha": "96f303389ede9370",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 228,
  "paths": 0,
  "selects": 0,
  "sha": "713a92812bead04f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 54,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 144,
  "paths": 0,
  "selects": 0,
  "sha": "917c8cf3c6e2036e",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 11,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 131,
  "paths": 0,
  "selects": 0,
  "sha": "52e217da805e6208",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 37,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 105,
  "paths": 0,
  "selects": 0,
  "sha": "367442be05d81007",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 107,
  "paths": 0,
  "selects": 2,
  "sha": "88a54559e3c23fcd",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 167,
  "paths": 22,
  "selects": 1,
  "sha": "376cf07fe2752fbc",
  "svgs": 13,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 39,
  "paths": 0,
  "selects": 0,
  "sha": "d75e031efb262e37",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 33,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 148,
  "paths": 0,
  "selects": 4,
  "sha": "27fe922328a1bde3",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 83,
  "paths": 0,
  "selects": 0,
  "sha": "89f2270587999123",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 69,
  "paths": 0,
  "selects": 0,
  "sha": "c6ac39a17d1fbccd",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 57,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 281,
  "paths": 0,
  "selects": 0,
  "sha": "0b1f6332d9ab09d5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 72,
  "paths": 0,
  "selects": 0,
  "sha": "e98c844a11a446f7",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 42,
  "canvases": 1,
  "inputs": 5,
  "lengthBucket": 188,
  "paths": 0,
  "selects": 1,
  "sha": "1a8fafa8d26efe61",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 37,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 123,
  "paths": 0,
  "selects": 0,
  "sha": "a057a54de6b3436b",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 196,
  "paths": 0,
  "selects": 0,
  "sha": "a1d49a9ef7d5fc6d",
  "svgs": 0,
}
`;
